# imperium

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/imperium/: __init__.py  config.py  main.py
backend/imperium/agents/: __init__.py  base.py  business_logic.py  compatibility.py  comprehension.py  documentation.py  implementation.py  research.py  security.py  structure.py  testing.py
backend/imperium/api/: schemas.py
backend/imperium/api/routes/: analysis.py  gates.py  health.py  ingest.py
backend/imperium/core/: orchestrator.py
backend/imperium/ingestion/: __init__.py  loader.py
backend/imperium/intelligence/: __init__.py  api_mapper.py  ast_builder.py  business_rule_extractor.py  call_graph.py  db_mapper.py  dependency_mapper.py  doc_extractor.py  language_detection.py  parser.py  security_scanner.py  test_coverage.py
backend/imperium/llm/: __init__.py  client.py  providers.py  routing.py
backend/imperium/rkb/: __init__.py  cache.py  embeddings.py  graph.py  models.py  store.py
backend/imperium/sandbox/: __init__.py  runner.py
docs/: repo-intelligence-engine.md
frontend/: package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/pages/: GateA.tsx  GateB.tsx  StructureMap.tsx
